// Vitest Snapshot v1

exports[`should analyze complex vue-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/services",
    "id": "/services",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/utils",
    "id": "/utils",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "source": [],
    "type": "entity",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/package.json",
    "type": "relationship",
  },
  {
    "from": "/services",
    "relationType": "parent",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/services",
    "type": "relationship",
  },
  {
    "from": "/utils",
    "relationType": "parent",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/utils",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "import",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "import",
    "to": "vue",
    "type": "relationship",
  },
  {
    "end": 398,
    "entityType": "import_declaration",
    "filePath": "<unknow>",
    "id": "vue",
    "kind": "ImportDeclaration",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 273,
    "type": "entity",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "end": 540,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 19,
    "lineStart": 17,
    "logStart": 437,
    "start": 400,
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "end": 342,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 319,
    "type": "entity",
  },
  {
    "end": 385,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 344,
    "type": "entity",
  },
  {
    "end": 317,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 282,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/openBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/createElementBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/toDisplayString",
    "type": "relationship",
  },
  {
    "code": " {
  expose();

const val = ref(fn1(1))

const __returned__ = { val, fn1 }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}",
    "end": 269,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup",
    "kind": "MethodDeclaration",
    "lineEnd": 12,
    "lineStart": 4,
    "logStart": 83,
    "start": 56,
    "type": "entity",
    "typeString": "(__props: any, { expose }: { expose: any; }) => { val: any; fn1: typeof import(\\"/utils/util\\").fn1; }",
  },
  {
    "code": " {
  const service = getService()
  return service.method1(a, service.prop1.method2(2))
}",
    "end": 169,
    "entityType": "function",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 6,
    "lineStart": 3,
    "logStart": 81,
    "start": 50,
    "type": "entity",
    "typeString": "typeof import(\\"/utils/util\\").fn1",
  },
  {
    "end": 2069,
    "entityType": "variable",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "kind": "VariableDeclaration",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 2045,
    "type": "entity",
  },
  {
    "end": 1605,
    "entityType": "function",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "kind": "MethodSignature",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 1522,
    "type": "entity",
    "typeString": "<T>(o: T, p: PropertyKey, attributes: PropertyDescriptor & ThisType<any>) => T",
  },
  {
    "from": "/cmp.vue/setup",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "parent",
    "to": "/cmp.vue/render",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "parent",
    "to": "/cmp.vue/setup",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "relationType": "parent",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts",
    "type": "entity",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "code": " {
  return {
    method1(a: number, b: number) {
      return (a + b) / 2
    },
    prop1: {
      method2(a: number) {
        return a * a
      }
    }
  }
}",
    "end": 190,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService",
    "kind": "FunctionDeclaration",
    "lineEnd": 12,
    "lineStart": 1,
    "logStart": 29,
    "start": 0,
    "type": "entity",
    "typeString": "typeof import(\\"/services/service\\").getService",
  },
  {
    "code": " {
      return (a + b) / 2
    }",
    "end": 108,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/method1",
    "kind": "MethodDeclaration",
    "lineEnd": 5,
    "lineStart": 3,
    "logStart": 76,
    "start": 46,
    "type": "entity",
    "typeString": "(a: number, b: number) => number",
  },
  {
    "code": " {
        return a * a
      }",
    "end": 178,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1/method2",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 7,
    "logStart": 148,
    "start": 129,
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "end": 184,
    "entityType": "property",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 6,
    "start": 114,
    "type": "entity",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService/prop1",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "relationType": "import",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
]
`;

exports[`should analyze complex vue2-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/services",
    "id": "/services",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/utils",
    "id": "/utils",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "source": [],
    "type": "entity",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/package.json",
    "type": "relationship",
  },
  {
    "from": "/services",
    "relationType": "parent",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/services",
    "type": "relationship",
  },
  {
    "from": "/utils",
    "relationType": "parent",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/utils",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "import",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "import",
    "to": "vue",
    "type": "relationship",
  },
  {
    "end": 235,
    "entityType": "import_declaration",
    "filePath": "<unknow>",
    "id": "vue",
    "kind": "ImportDeclaration",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 110,
    "type": "entity",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "end": 377,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 16,
    "lineStart": 14,
    "logStart": 274,
    "start": 237,
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "end": 179,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 156,
    "type": "entity",
  },
  {
    "end": 222,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 181,
    "type": "entity",
  },
  {
    "end": 154,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 119,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/openBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/createElementBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/toDisplayString",
    "type": "relationship",
  },
  {
    "code": " {
    return {
      val: fn1(1)
    }
  }",
    "end": 106,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/data",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 5,
    "logStart": 64,
    "start": 57,
    "type": "entity",
    "typeString": "() => { val: number; }",
  },
  {
    "code": " {
  const service = getService()
  return service.method1(a, service.prop1.method2(2))
}",
    "end": 169,
    "entityType": "function",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 6,
    "lineStart": 3,
    "logStart": 81,
    "start": 50,
    "type": "entity",
    "typeString": "typeof import(\\"/utils/util\\").fn1",
  },
  {
    "from": "/cmp.vue/data",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "parent",
    "to": "/cmp.vue/render",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "parent",
    "to": "/cmp.vue/data",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "relationType": "parent",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "code": " {
  return {
    method1(a: number, b: number) {
      return (a + b) / 2
    },
    prop1: {
      method2(a: number) {
        return a * a
      }
    }
  }
}",
    "end": 190,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService",
    "kind": "FunctionDeclaration",
    "lineEnd": 12,
    "lineStart": 1,
    "logStart": 29,
    "start": 0,
    "type": "entity",
    "typeString": "typeof import(\\"/services/service\\").getService",
  },
  {
    "code": " {
      return (a + b) / 2
    }",
    "end": 108,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/method1",
    "kind": "MethodDeclaration",
    "lineEnd": 5,
    "lineStart": 3,
    "logStart": 76,
    "start": 46,
    "type": "entity",
    "typeString": "(a: number, b: number) => number",
  },
  {
    "code": " {
        return a * a
      }",
    "end": 178,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1/method2",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 7,
    "logStart": 148,
    "start": 129,
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "end": 184,
    "entityType": "property",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 6,
    "start": 114,
    "type": "entity",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService/prop1",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "relationType": "import",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/services/service.ts/getService",
    "relationType": "parent",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
]
`;

exports[`should analyze simple ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "source": [],
    "type": "entity",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "end": 39,
    "entityType": "function",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "kind": "ArrowFunction",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 19,
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "from": "/util.ts",
    "relationType": "parent",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
]
`;

exports[`should analyze vue-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "source": [],
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "source": [],
    "type": "entity",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "import",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "import",
    "to": "vue",
    "type": "relationship",
  },
  {
    "end": 392,
    "entityType": "import_declaration",
    "filePath": "<unknow>",
    "id": "vue",
    "kind": "ImportDeclaration",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 267,
    "type": "entity",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "end": 534,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 19,
    "lineStart": 17,
    "logStart": 431,
    "start": 394,
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "end": 336,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 313,
    "type": "entity",
  },
  {
    "end": 379,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 338,
    "type": "entity",
  },
  {
    "end": 311,
    "entityType": "variable",
    "filePath": "<unknown>",
    "id": "/cmp.vue/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 276,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/openBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/createElementBlock",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/render",
    "relationType": "use",
    "to": "/cmp.vue/toDisplayString",
    "type": "relationship",
  },
  {
    "code": " {
  expose();

const val = ref(fn1(1))

const __returned__ = { val, fn1 }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}",
    "end": 263,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup",
    "kind": "MethodDeclaration",
    "lineEnd": 12,
    "lineStart": 4,
    "logStart": 77,
    "start": 50,
    "type": "entity",
    "typeString": "(__props: any, { expose }: { expose: any; }) => { val: any; fn1: typeof import(\\"/util\\").fn1; }",
  },
  {
    "code": " {
  return a + 1
}",
    "end": 49,
    "entityType": "function",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 3,
    "lineStart": 1,
    "logStart": 31,
    "start": 0,
    "type": "entity",
    "typeString": "typeof import(\\"/util\\").fn1",
  },
  {
    "end": 2069,
    "entityType": "variable",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "kind": "VariableDeclaration",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 2045,
    "type": "entity",
  },
  {
    "end": 1605,
    "entityType": "function",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "kind": "MethodSignature",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 1522,
    "type": "entity",
    "typeString": "<T>(o: T, p: PropertyKey, attributes: PropertyDescriptor & ThisType<any>) => T",
  },
  {
    "from": "/cmp.vue/setup",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "parent",
    "to": "/cmp.vue/render",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "relationType": "parent",
    "to": "/cmp.vue/setup",
    "type": "relationship",
  },
  {
    "from": "/util.ts",
    "relationType": "parent",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "entityType": "file",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts",
    "type": "entity",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "from": "/node_modules/typescript/lib/lib.es5.d.ts",
    "relationType": "parent",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "relationType": "import",
    "to": "/cmp.vue",
    "type": "relationship",
  },
]
`;
